2008-05-16  Takeshi Abe  <tabe@fixedpoint.jp>

	* file_magic.c (fileMagicOpen, fileMagicFile): simplified.

2007-12-28  Takeshi Abe  <tabe@fixedpoint.jp>

	* configure.ac: check function magic_descriptor.

2007-12-16  Takeshi Abe  <tabe@fixedpoint.jp>

	* Release 0.1.2.

	* file/magic.scm (call-with-magic-set): `before' part became sane wrt
	continuation.

	* test.scm: update for file-4.21, that changed the behavior in case of
	calling magic_file() with a non existing path.

	* file_magic.c (defaultMagicFile): accepted the FreeBSD's flavor.

	* Makefile.in, configure.ac: introduced the current manner of gauche-package.

2007-11-10  Takeshi Abe  <tabe@fixedpoint.jp>

	* file_magic.h: inlude gauche.h before other headers possibly
	concerned with Linux's Large File Support.

2007-01-18  Takeshi Abe  <tabe@fixedpoint.jp>

	* release 0.1.1

	* file/magic.scm (<magic-error>): adopted a spec change of define-condition-type
	with Gauche 0.8.8.

2006-12-20  Takeshi Abe  <tabe@fixedpoint.jp>

	* file_magic.c (fileMagicRaiseCondition): avoided passing NULL as
	a message.

2006-12-11  Takeshi Abe  <tabe@fixedpoint.jp>

	* doc/reference.scm: mentioned the return values of magic-open and
	magic-file on error.

	* file_magiclib.stub (magic-open, magic-file): treated the return value
	of type 'maybe'.

2006-12-06  Takeshi Abe  <tabe@fixedpoint.jp>

	* release 0.1.0.
