@@ -1,7 +1,7 @@
 /*
  *  file_magic.c
  *
- *   Copyright (c) 2006,2007 Takeshi Abe. All rights reserved.
+ *   Copyright (c) 2006-2008 Takeshi Abe. All rights reserved.
  *
  *   Redistribution and use in source and binary forms, with or without
  *   modification, are permitted provided that the following conditions
@@ -134,6 +134,11 @@ defaultMagicFile(void)
   return "/usr/share/file/magic";
 #endif
 }
+
+/*
+ * Module initialization function.
+ */
+extern void Scm_Init_file_magiclib(ScmModule*);
 
 ScmObj
 Scm_Init_file_magic(void)
