@@ -1,3 +1,7 @@
+2008-07-17  Takeshi Abe  <tabe@fixedpoint.jp>
+
+	* file_magic.h: added declarations.
+
 2008-05-16  Takeshi Abe  <tabe@fixedpoint.jp>
 
 	* file_magic.c (fileMagicOpen, fileMagicFile): simplified.
